---
source: parser/ast_tree_test.rs
expression: "let my_func = fn(x) { x };"
---
{
  "Program": {
    "type": "Program",
    "body": [
      {
        "type": "Let",
        "identifier": {
          "type": "IDENTIFIER",
          "name": "my_func",
          "span": {
            "start": 4,
            "end": 11
          }
        },
        "type_annotation": null,
        "expr": {
          "type": "FunctionDeclaration",
          "params": [
            {
              "type": "Param",
              "name": {
                "type": "IDENTIFIER",
                "name": "x",
                "span": {
                  "start": 17,
                  "end": 18
                }
              },
              "type_annotation": null,
              "span": {
                "start": 17,
                "end": 18
              }
            }
          ],
          "return_type": null,
          "body": {
            "type": "BlockStatement",
            "body": [
              {
                "type": "IDENTIFIER",
                "name": "x",
                "span": {
                  "start": 22,
                  "end": 23
                }
              }
            ],
            "span": {
              "start": 20,
              "end": 25
            }
          },
          "span": {
            "start": 14,
            "end": 25
          },
          "name": "my_func"
        },
        "span": {
          "start": 0,
          "end": 26
        }
      }
    ],
    "span": {
      "start": 0,
      "end": 26
    }
  }
}
